# classificationHead

./: .gitignore  data_statistics.py  evaluate_localization.py  main.py  pyproject.toml
data/: __init__.py  jsonl_dataset.py  schema.py  toy_dataset.py
logs/localization/: events.out.tfevents.1773988290.Jin.622229.0
tasks/: classification.py  localization.py
tasks/type classification preprocessing/: 1. preprocess.py  2. clean_dataset.py  3. build_labels.py  4. split.py  json_to_csv.py
train/: train_localization.py
train/classification/: 5. train.py  evaluate.py  predict.py  train.py
