[project]
name = "ai-proj-guide-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets<=4.8.2",
    "evaluate>=0.4.6",
    "scikit-learn>=1.8.0",
    "protobuf>=5.0.0",
    "tqdm>=4.66.0",
    "torch==2.6.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "transformers>=4.40,<5",
    "tensorboard>=2.20.0",
    "pandas>=3.0.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
